<?xml version="1.0" encoding="utf-8"?>
<!-- The colour scheme / font picker screen, merged from termux-styling. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/partial_primary_toolbar"
        layout="@layout/partial_primary_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/row_colors"
                style="@style/Mayonaka.SettingRow"
                android:orientation="vertical">

                <TextView
                    style="@style/Mayonaka.SettingRow.Title"
                    android:text="@string/color_prompt" />

                <TextView
                    android:id="@+id/summary_colors"
                    style="@style/Mayonaka.SettingRow.Summary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_font"
                style="@style/Mayonaka.SettingRow"
                android:orientation="vertical">

                <TextView
                    style="@style/Mayonaka.SettingRow.Title"
                    android:text="@string/font_prompt" />

                <TextView
                    android:id="@+id/summary_font"
                    style="@style/Mayonaka.SettingRow.Summary" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="@dimen/content_padding_double"
                android:paddingEnd="4dp"
                android:text="@string/mayonaka_style_hint"
                android:textColor="@color/mayonaka_foreground_dim"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
